demo-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-app
  name: demo-app
  namespace: development
spec:
  selector:
    matchLabels:
      app: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: demo-app
                optional: true
            - secretRef:
                name: demo-app
                optional: true
          image: "triple3a/demo-app:latest"
          imagePullPolicy: Always
          name: demo-app
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 150m
              memory: 128Mi
