demo-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: development
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: demo-app
  type: NodePort
