demo-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: development
spec:
  ingressClassName: nginx
  rules:
    - host: demo.jb-host.net
      http:
        paths:
          - backend:
              service:
                name: demo-app
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
